<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.raulsola.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_marginTop="25dp"
        android:text="@string/movies"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        style="@style/MyCustomButtonStyle"/>

    <Button
        android:text="@string/stock"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        style="@style/MyCustomButtonStyle"/>

    <Button
        android:text="@string/build"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        style="@style/MyCustomButtonStyle"/>

    <Button
        android:text="@string/appmaterial"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        style="@style/MyCustomButtonStyle"/>

    <Button
        android:text="@string/ubiquitous"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        style="@style/MyCustomButtonStyle"/>

    <Button
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        style="@style/MyCustomButtonStyle"/>
</RelativeLayout>
